# goit-pyweb-8

./: pyproject.toml
hw_1/: models.py  seed.py
hw_2/: concumer.py  models.py  producer.py
